Commit 6 - Se agregaron estilos al expense-list

--- a/src/app/components/expense-list/expense-list.component.html
+++ b/src/app/components/expense-list/expense-list.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex align-items-center justify-content-between gap-2 flex-wrap mt-5 mb-4">
-    <h2>Gastos</h2>
+    <h2 class="section-title">Gastos</h2>
 
     <div class="d-flex align-items-center flex-wrap gap-3 gap-sm-5">
-        <p class="m-0">Total gastado: <span class="fw-bold ms-1"><i class="ri-arrow-down-s-fill text-danger">
+        <p class="m-0 total-spent-text">Total gastado: <span class="fw-bold ms-1"><i class="ri-arrow-down-s-fill text-danger">
         </i>{{ total | currency }}</span></p>
         <a routerLink="/gastos/nuevo" class="btn btn-primary">Agregar gastos</a>
     </div>
@@ -17,7 +17,7 @@
                 <th scope="col">Cantidad</th>
                 <th scope="col">Descripción</th>
                 <th scope="col" width="180">Fecha de gasto</th>
-                <th scope="col">#</th>
+                <th scope="col" class="table-head-action">#</th>
             </tr>
         </thead>
         <tbody>
@@ -28,7 +28,7 @@
                     <td>{{ expense.amount | currency }}</td>
                     <td>{{ expense.description }}</td>
                     <td>{{ expense.expense_date | date: 'dd/MM/YY' }}</td>
-                    <td>
+                    <td class="table-data-action">
                         <div>
                             <a [routerLink]="['/gastos', expense.id, 'editar']"><i class="ri-edit-box-line"></i></a>
                             <button class="btn btn-link p-0"><i class="ri-delete-bin-2-line"></i></button>
