Commit 9 - Implementación de Toastify para la notificación de mensajes de validación

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "bootstrap/scss/bootstrap.scss";
 @import "assets/scss/_table.scss";
 @import "assets/scss/_button.scss";
+@import "toastify-js/src/toastify.css";
 
 .section-title{
     margin: 0;
